<resources>
    <string name="app_name">Swords &amp; Magic</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email_nickname">Введите своё имя</string>
    <string name="email_mail">Введите свою почту</string>
    <string name="email_password">Введите пароль</string>
    <string name="entrance">Вход</string>
    <string name="load">Загрузить фото</string>
    <string name="skip_turn">Пропуск хода</string>
    <string name="nickname_enemy">Вражеское имя</string>
    <string-array name="act">
        <item>Лечиться</item>
        <item>Ув. шанс защиты</item>
        <item>Сбежать</item>
    </string-array>
    <string name="attack">Атака</string>
    <string name="percent">1</string>
    <string name="accept">Подтвердить</string>
    <string name="state">Поиск игры...</string>
    <string name="money">0.0</string>
    <string name="text_money">Монеты</string>
    <string name="name">Имя</string>
    <string name="space"> </string>
    <string name="zero">0</string>
    <string name="backslash">/</string>
    <string name="maximum">550</string>
    <string name="startChat">Войти в чат</string>
    <string name="hundred_3">300</string>
    <string name="hundred_5">500</string>
    <string name="hundred_10">1000</string>
    <string name="hundred_12">1200</string>
    <string name="hundred_15">1500</string>
</resources>