<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".FirstFragment">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/change_avatar"
        android:text="@string/load"
        android:layout_gravity="right"/>
    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">
        <ImageView
            android:layout_width="144dp"
            android:layout_height="144dp"
            android:id="@+id/avatar_in_settings"
            android:layout_gravity="center"
            android:src="@drawable/ic_baseline_account_box_24"/>
    </FrameLayout>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/input_nickname"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_gravity="center"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/accept"
        android:text="@string/accept"
        android:layout_marginRight="20dp"
        android:layout_gravity="right"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:src="@drawable/ic_baseline_check_box_outline_blank_24"
            android:id="@+id/active_common"/>
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_check_box_outline_blank_24"
            android:id="@+id/active_ultimate"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_gravity="right"
        android:gravity="right"
        android:orientation="horizontal"
        android:background="@color/ultimate">
        <ImageButton
            android:id="@+id/ultimate1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:src="@drawable/ic_baseline_check_box_outline_blank_24" />
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_check_box_outline_blank_24"
            android:gravity="right"
            android:id="@+id/ultimate2"/>
        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_check_box_outline_blank_24"
                android:gravity="right"
                android:id="@+id/ultimate3"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/inf_ultimate3"
                android:layout_gravity="center"
                android:text="@string/hundred_3"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="17dp"/>
        </FrameLayout>

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_check_box_outline_blank_24"
                android:gravity="right"
                android:id="@+id/ultimate4"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/inf_ultimate4"
                android:layout_gravity="center"
                android:text="@string/hundred_5"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="17dp"/>
        </FrameLayout>

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_check_box_outline_blank_24"
                android:gravity="right"
                android:id="@+id/ultimate5"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/inf_ultimate5"
                android:layout_gravity="center"
                android:text="@string/hundred_10"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="17dp"/>
        </FrameLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:layout_marginTop="20dp"
        android:background="@color/common"
        android:orientation="horizontal">
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:src="@drawable/ic_baseline_check_box_outline_blank_24"
            android:id="@+id/common1"/>
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_check_box_outline_blank_24"
            android:gravity="right"
            android:id="@+id/common2"/>
        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_check_box_outline_blank_24"
                android:gravity="right"
                android:id="@+id/common3"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/inf_common3"
                android:layout_gravity="center"
                android:text="@string/hundred_3"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="17dp"/>
        </FrameLayout>
        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_check_box_outline_blank_24"
                android:gravity="right"
                android:id="@+id/common4"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/inf_common4"
                android:layout_gravity="center"
                android:text="@string/hundred_5"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="17dp"/>
        </FrameLayout>
        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_check_box_outline_blank_24"
                android:gravity="right"
                android:id="@+id/common5"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/inf_common5"
                android:layout_gravity="center"
                android:text="@string/hundred_10"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="17dp"/>
        </FrameLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:background="@color/common"
        android:gravity="right">
        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_check_box_outline_blank_24"
                android:gravity="right"
                android:id="@+id/common6"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/inf_common6"
                android:layout_gravity="center"
                android:text="@string/hundred_12"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="17dp"/>
        </FrameLayout>
        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_check_box_outline_blank_24"
                android:gravity="right"
                android:id="@+id/common7"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/inf_common7"
                android:layout_gravity="center"
                android:text="@string/hundred_15"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="17dp"/>
        </FrameLayout>


    </LinearLayout>

</LinearLayout>