<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Game"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:weightSum="2.7">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="0.7"
            android:weightSum="3.1">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:src="@drawable/ic_baseline_account_box_24"
                android:id="@+id/avatar_enemy"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/nickname_enemy"
                android:text="@string/nickname_enemy"
                android:textSize="17dp"
                android:layout_gravity="center"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/skip_turn"
                android:layout_gravity="center"
                android:layout_weight="0.1"
                android:text="@string/skip_turn"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="4">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/log_enemy"
                android:layout_weight="2"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/log_hero"
                android:layout_weight="2"/>
        </LinearLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_height="match_parent">
            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/act"/>
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/avatar_in_game"
                android:src="@drawable/ic_baseline_account_box_24"
                android:layout_above="@+id/ll1"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/ll1"
                android:layout_alignParentBottom="true">
                <Button
                    android:id="@+id/attack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:gravity="center"
                    android:text="@string/attack"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:orientation="horizontal">
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <ImageButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/common"
                            android:layout_gravity="right"
                            android:src="@drawable/ic_baseline_check_box_outline_blank_24"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/percent_common"
                            android:text="@string/percent"
                            android:layout_gravity="center"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <ImageButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/rare"
                            android:layout_gravity="right"
                            android:src="@drawable/ic_baseline_check_box_outline_blank_24"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/percent_rare"
                            android:text="@string/percent"
                            android:layout_gravity="center"/>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

        </RelativeLayout>
    </LinearLayout>


</LinearLayout>